fix paths and css in shift index table

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -402,6 +402,10 @@ label {
   label {
     text-align: center;
   }
+  .select_wrapper{
+    margin: 0 auto;
+    width: 85%;
+  }
   .multi_select{ 
     height: 10em;
   }
